--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -69,7 +69,7 @@
     width: 100%;
     padding: 0.6rem;
     background-color: #dc3545;
-    color: white;
+    color: rgb(255, 255, 255);
     border: none;
     border-radius: 6px;
     font-weight: bold;
@@ -79,4 +79,11 @@
 
 .logout-btn:hover {
     background-color: #c82333;
+}
+
+.nombre-usuario {
+  font-weight: 800;
+  color: #ffffff;
+  font-size: 1.5rem;
+  letter-spacing: 0.5px;
 }
